--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-image-zooom": "^1.5.5",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1"
   },
