--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-image-zooom": "^1.5.5",
+    "react-medium-image-zoom": "^5.3.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1"
   },
