--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-image-zooom": "^1.5.5",
     "react-medium-image-zoom": "^5.3.0",
