--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
+    "react-zoom-pan-pinch": "^3.7.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
