--- a/package.json
+++ b/package.json
@@ -20,11 +20,10 @@
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
-    "react-image-zooom": "^1.5.5",
-    "react-medium-image-zoom": "^5.3.0",
     "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
+    "react-zoom-pan-pinch": "^3.7.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
